# ComfyUI-String-Function

./: .github\workflows\publish.yml  LICENSE  README.md  nodes.py  pyproject.toml
.github/workflows/: publish.yml
sample_workflow/: String Extract Prompt.json
web/: prompt_preview.js
