[project]
name = "comfyui-string-function"
version = "1.0.0"
description = "String manipulation nodes for ComfyUI. Includes String Extract Prompt for extracting prompts from LLM output."
license = {text = "MIT"}
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/TakkunRed/ComfyUI-String-Function"

[tool.comfy]
PublisherId = "takkun"
DisplayName = "String Function"
Icon = ""
